<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F3F6"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/rectangle_2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:alpha="0.08"
        android:fontFamily="@font/digitalnumbers_regular"
        android:text="@string/text8888"
        android:textAlignment="textEnd"
        android:textColor="#373A37"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:fontFamily="@font/digitalnumbers_regular"
        android:text="@string/mainText"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="140dp"
        android:layout_height="34dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/calculator"
        android:textColor="#373A37"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reset"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F1F3F6"
                android:elevation="1dp"
                android:fontFamily="sans-serif-medium"
                android:stateListAnimator="@null"
                android:text="@string/clear"
                android:textColor="#3A4E89"
                android:textSize="29sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/sign"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F1F3F6"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/memory"
                android:textColor="#3A4E89"
                android:textSize="29sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp"
                tools:text="+/-" />

            <Button
                android:id="@+id/remainder"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F1F3F6"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/remainder"
                android:textColor="#3A4E89"
                android:textSize="29sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp"
                tools:text="%" />

            <Button
                android:id="@+id/division"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#3A4E89"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/division"
                android:textColor="#FFFFFF"
                android:textSize="43sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F1F3F6"
                android:backgroundTintMode="add"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/seven"
                android:textColor="#3A4E89"
                android:textSize="29sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp"
                tools:text="7" />

            <Button
                android:id="@+id/eight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F1F3F6"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/eight"
                android:textColor="#3A4E89"
                android:textSize="29sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp"
                tools:text="8" />

            <Button
                android:id="@+id/nine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F1F3F6"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/nine"
                android:textColor="#3A4E89"
                android:textSize="29sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp"
                tools:text="9" />

            <Button
                android:id="@+id/multiply"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#3A4E89"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/multiplication"
                android:textColor="#FFFFFF"
                android:textSize="29sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F1F3F6"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/four"
                android:textColor="#3A4E89"
                android:textSize="29sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp"
                tools:text="4" />

            <Button
                android:id="@+id/five"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F1F3F6"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/five"
                android:textColor="#3A4E89"
                android:textSize="29sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp"
                tools:text="5" />

            <Button
                android:id="@+id/six"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F1F3F6"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/six"
                android:textColor="#3A4E89"
                android:textSize="29sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp"
                tools:text="6" />

            <Button
                android:id="@+id/minus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#3A4E89"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/minus"
                android:textColor="#FFFFFF"
                android:textSize="45sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp"
                tools:ignore="TextContrastCheck"
                tools:text="-" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F1F3F6"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/one"
                android:textColor="#3A4E89"
                android:textSize="29sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp"
                tools:text="1" />

            <Button
                android:id="@+id/two"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F1F3F6"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/two"
                android:textColor="#3A4E89"
                android:textSize="29sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp"
                tools:text="2" />

            <Button
                android:id="@+id/three"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F1F3F6"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/three"
                android:textColor="#3A4E89"
                android:textSize="29sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp"
                tools:text="3" />

            <Button
                android:id="@+id/plus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#3A4E89"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/plus"
                android:textColor="#FFFFFF"
                android:textSize="29sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp"
                tools:text="+" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/zero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="0.66"
                android:backgroundTint="#F1F3F6"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/zero"
                android:textColor="#3A4E89"
                android:textSize="29sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp"
                tools:text="0" />

            <Button
                android:id="@+id/dot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F1F3F6"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/dot"
                android:textColor="#3A4E89"
                android:textSize="29sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp"
                tools:ignore="TextContrastCheck"
                tools:text="," />

            <Button
                android:id="@+id/equals"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="#3A4E89"
                android:elevation="1dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:stateListAnimator="@null"
                android:text="@string/equals"
                android:textColor="#FFFFFF"
                android:textSize="29sp"
                android:translationZ="2dp"
                app:cornerRadius="20dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>